# LectureCut

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  cargo.toml  lecturecut.py  requirements.txt  vad.py
.github/workflows/: build-release.yml  docker-build-ghcr.yml
build_tools/: Makefile  build.bat
generator/: CMakeLists.txt
generator/src/: definitions.h  generator.cpp  generator.h  uuid.h
python_src/: lecturecut.py  log.py  module_manager.py  printer.py  stats.py
render/: CMakeLists.txt
render/src/: definitions.h  helper.h  render.cpp  render.h  uuid.h
src/: argmunents.rs  arguments.py  helper.py  helper.rs  lecturecut.py  log.py  main.rs  module_manager.py  module_manager.rs  printer.rs  stats.py  vad.py
